# geant

./: .gitignore  CMakeLists.txt  LICENSE  buildSimConfig.py  light_collection_eff_GAGG.ipynb  light_collection_eff_LYSO.ipynb  main.cc  readme.md  simulation.config.file
analysis/: buildSimConfig.py  (+2 more)
import-capable/: .gitignore  CMakeLists.txt  readme.md  simulation.config.file  todo.txt
import-capable/macros/: gps-beam-center.mac  rod-with-reflector-slot.mac  trapezoid_illumination.mac
import-capable/macros/collimation/: collimator.mac
import-capable/macros/fierce/: crystal_test.mac
import-capable/macros/response_matrix/: chunked_srm_macro.py  generate_srm_macro.py
import-capable/scripts/: .gitignore  collimator_test_macro.py  construct_angled_triangle.py  construct_flat_right_triangle.py  construct_flat_thick_trapezoid.py  construct_flat_trapezoid.py  construct_flat_trapezoid_equiv_thick.py  construct_flat_triangle.py  construct_trapezoid.py  construct_triangle.py  crystal.py  crystal_tungsten_test.py  find_dims.py  make_trapezoid_lu_macro.py  make_trapezoid_macro.py  rect_macro.py  rectangular.py  sipms.py  trapezoid_macro_random.py  trapezoid_meta.py  triangular.py
import-capable/scripts/fastsdd-detector-head/: .gitignore  active_region.py  base.py  collimators.py  composite.py  lid.py  metadata.py  readme.md  tec.py
import-capable/scripts/iso-triangle/: iso-prism.FCStd
import-capable/scripts/tungsten-filament-slabs/: .gitignore  make_geometries.py  run_slabs
import-capable/src/: CMakeLists.txt  actions.cc  actions.hh  analysis.cc  analysis.hh  construction.cc  construction.hh  detectors.cc  detectors.hh  hits.cc  hits.hh  main.cc
import-capable/src/config/: CMakeLists.txt  config_customization.hh  configs.cc  configs.hh
(+151 files in other folders)
